<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="16dp">

    <ImageView
        android:id="@+id/item_song_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/nav_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/item_song_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/time"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/item_song_artist" />

    <TextView
        android:id="@+id/item_song_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/song_name"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_song_imageView"
        app:layout_constraintTop_toTopOf="@+id/item_song_imageView"
        app:layout_constraintEnd_toStartOf="@+id/item_song_time"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/item_song_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/singer"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/item_song_album"
        app:layout_constraintStart_toStartOf="@+id/item_song_name"
        app:layout_constraintTop_toBottomOf="@+id/item_song_name" />

    <TextView
        android:id="@+id/item_song_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/album"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/item_song_time"
        app:layout_constraintStart_toEndOf="@+id/item_song_artist"
        app:layout_constraintTop_toTopOf="@+id/item_song_artist"
        app:layout_constraintBottom_toBottomOf="@+id/item_song_artist"
        android:layout_marginEnd="8dp" />

    <!--    <ImageView-->
    <!--        android:id="@+id/item_song_more"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerVertical="true"-->
    <!--        android:layout_toEndOf="@+id/item_song_time"-->
    <!--        android:clickable="true"-->
    <!--        android:contentDescription="@string/more"-->
    <!--        android:focusable="true"-->
    <!--        android:paddingTop="8dp"-->
    <!--        android:paddingBottom="8dp"-->
    <!--        android:scaleType="centerInside"-->
    <!--        android:src="@drawable/ic_menu_moreoverflow" />-->

</androidx.constraintlayout.widget.ConstraintLayout>