<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.FeedbackFragment">

    <TextView
        android:id="@+id/feedback_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/description"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_question"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="?attr/colorOnPrimary"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/feedback_editText"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/suggestion"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textColor="?attr/colorOnSecondary"
                android:textColorHint="@color/gray"
                android:textSize="16sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/feedback_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_question"
        android:layout_marginStart="20dp"
        android:layout_marginTop="280dp"
        android:text="@string/upload_image"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/submit"
        android:textSize="18sp"
        tools:ignore="ButtonStyle" />

    <ImageView
        android:id="@+id/feedback_image"
        android:layout_width="115dp"
        android:layout_height="200dp"
        android:layout_below="@id/feedback_add_image"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_add_photo" />
</RelativeLayout>