<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    android:background="?attr/colorOnPrimary"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardBackgroundColor="?attr/colorOnPrimary"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_album_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/item_album_layout"
            android:contentDescription="@string/logo"
            android:scaleType="centerCrop"
            android:src="@drawable/nav_logo" />

        <RelativeLayout
            android:id="@+id/item_album_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="5dp">

            <TextView
                android:id="@+id/item_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/album"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_album_song_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_album"
                android:layout_marginTop="1dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/count"
                android:textColor="@color/gray"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>