<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimaryVariant"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="3dp"
    android:paddingRight="16dp"
    android:paddingBottom="3dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/item_song_imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/nav_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_song_name"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/song_name"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/item_song_artist"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/singer"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/item_song_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_play_bar" />
    </LinearLayout>
</LinearLayout>